--- a/.github/workflows/centos7/rpm/release.yml
+++ b/.github/workflows/centos7/rpm/release.yml
@@ -14,20 +14,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: "Read secrets"
-      uses: rancher-eio/read-vault-secrets@main
-      with:
-        secrets: |
-          secret/data/github/repo/${{ github.repository }}/private_key | PRIVATE_KEY ;
-          secret/data/github/repo/${{ github.repository }}/private_key_passphrase | PRIVATE_KEY_PASSPHRASE ;
-          secret/data/github/repo/${{ github.repository }}/testing_private_key | TESTING_PRIVATE_KEY ;
-          secret/data/github/repo/${{ github.repository }}/testing_private_key_passphrase | TESTING_PRIVATE_KEY_PASSPHRASE ;
-          secret/data/github/repo/${{ github.repository }}/aws_s3_bucket | AWS_S3_BUCKET ;
-          secret/data/github/repo/${{ github.repository }}/aws_access_key_id | AWS_ACCESS_KEY_ID ;
-          secret/data/github/repo/${{ github.repository }}/aws_secret_access_key | AWS_SECRET_ACCESS_KEY ;
-          secret/data/github/repo/${{ github.repository }}/testing_aws_s3_bucket | TESTING_AWS_S3_BUCKET ;
-          secret/data/github/repo/${{ github.repository }}/testing_aws_access_key_id | TESTING_AWS_ACCESS_KEY_ID ;
-          secret/data/github/repo/${{ github.repository }}/testing_aws_secret_access_key | TESTING_AWS_SECRET_ACCESS_KEY ;
+    # - name: "Read secrets"
+    #   uses: rancher-eio/read-vault-secrets@main
+    #   with:
+    #     secrets: |
+    #       secret/data/github/repo/${{ github.repository }}/private_key | PRIVATE_KEY ;
+    #       secret/data/github/repo/${{ github.repository }}/private_key_passphrase | PRIVATE_KEY_PASSPHRASE ;
+    #       secret/data/github/repo/${{ github.repository }}/testing_private_key | TESTING_PRIVATE_KEY ;
+    #       secret/data/github/repo/${{ github.repository }}/testing_private_key_passphrase | TESTING_PRIVATE_KEY_PASSPHRASE ;
+    #       secret/data/github/repo/${{ github.repository }}/aws_s3_bucket | AWS_S3_BUCKET ;
+    #       secret/data/github/repo/${{ github.repository }}/aws_access_key_id | AWS_ACCESS_KEY_ID ;
+    #       secret/data/github/repo/${{ github.repository }}/aws_secret_access_key | AWS_SECRET_ACCESS_KEY ;
+    #       secret/data/github/repo/${{ github.repository }}/testing_aws_s3_bucket | TESTING_AWS_S3_BUCKET ;
+    #       secret/data/github/repo/${{ github.repository }}/testing_aws_access_key_id | TESTING_AWS_ACCESS_KEY_ID ;
+    #       secret/data/github/repo/${{ github.repository }}/testing_aws_secret_access_key | TESTING_AWS_SECRET_ACCESS_KEY ;
           
     - name: build-rpm-el7
       run: |
@@ -37,22 +37,22 @@ jobs:
       run: |
         make centos7-sign
       env:
-        PRIVATE_KEY: ${{ env.PRIAVATE_KEY }}
-        PRIVATE_KEY_PASSPHRASE: ${{ env.PRIVATE_KEY_PASSPHRASE }}
-        TESTING_PRIVATE_KEY: ${{ env.TESTING_PRIAVATE_KEY }}
-        TESTING_PRIVATE_KEY_PASSPHRASE: ${{ env.TESTING_PRIVATE_KEY_PASSPHRASE }}
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+        PRIVATE_KEY_PASSPHRASE: ${{ secrets.PRIVATE_KEY_PASSPHRASE }}
+        TESTING_PRIVATE_KEY: ${{ secrets.TESTING_PRIVATE_KEY }}
+        TESTING_PRIVATE_KEY_PASSPHRASE: ${{ secrets.TESTING_PRIVATE_KEY_PASSPHRASE }}
       
     - name: upload-repo-el7
       run: |
         make centos7-upload-repo
       env:
         COMBARCH: x86_64-amd64
-        AWS_S3_BUCKET: ${{ env.AWS_S3_BUCKET }}
-        AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
-        TESTING_AWS_S3_BUCKET: ${{ env.TESTING_AWS_S3_BUCKET }}
-        TESTING_AWS_ACCESS_KEY_ID: ${{ env.TESTING_AWS_ACCESS_KEY_ID }}
-        TESTING_AWS_SECRET_ACCESS_KEY: ${{ env.TESTING_AWS_SECRET_ACCESS_KEY }}
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        TESTING_AWS_S3_BUCKET: ${{ secrets.TESTING_AWS_S3_BUCKET }}
+        TESTING_AWS_ACCESS_KEY_ID: ${{ secrets.TESTING_AWS_ACCESS_KEY_ID }}
+        TESTING_AWS_SECRET_ACCESS_KEY: ${{ secrets.TESTING_AWS_SECRET_ACCESS_KEY }}
     
     - name: checksum-rpm-el7
       run: |
