--- a/Dockerfile.centos7.dapper
+++ b/Dockerfile.centos7.dapper
@@ -1,5 +1,11 @@
 FROM centos:7
 
+RUN sh -x  \
+  for i in $(ls /etc/yum.repos.d); do \
+    sed -i -e "s/mirrorlist.*//g" /etc/yum.repos.d/$i && \
+    sed -i -e "s/#baseurl=http:\/\/mirror.centos.org/baseurl=http:\/\/linuxsoft.cern.ch\/centos-vault\//g" /etc/yum.repos.d/$i; \
+  done
+
 RUN yum install -y epel-release \
  && yum -y install container-selinux git rpm-build selinux-policy-devel yum-utils
 
