--- a/Dockerfile.centos7.dapper
+++ b/Dockerfile.centos7.dapper
@@ -8,7 +8,7 @@ RUN yum install -y epel-release \
 
 ENV DAPPER_SOURCE /source
 ENV DAPPER_OUTPUT ./dist
-ENV DAPPER_ENV COMBARCH DRONE_TAG TAG
+ENV DAPPER_ENV COMBARCH DRONE_TAG TAG PRIVATE_KEY PRIVATE_KEY_PASSPHRASE TESTING_PRIVATE_KEY TESTING_PRIVATE_KEY_PASSPHRASE AWS_S3_BUCKET AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY TESTING_AWS_S3_BUCKET TESTING_AWS_ACCESS_KEY_ID TESTING_AWS_SECRET_ACCESS_KEY
 ENV HOME ${DAPPER_SOURCE}
 WORKDIR ${DAPPER_SOURCE}
 
