--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,9 @@ jobs:
     #   with:
     #     secrets: |
     #       secret/data/github/repo/${{ github.repository }}/private_key | PRIVATE_KEY ;
-    #       secret/data/github/repo/${{ github.repository }}/private_key_passphrase | PRIVATE_KEY_PASSPHRASE ;
+    #       secret/data/github/repo/${{ github.repository }}/private_key_passphrase | PRIVATE_KEY_PASS_PHRASE ;
     #       secret/data/github/repo/${{ github.repository }}/testing_private_key | TESTING_PRIVATE_KEY ;
-    #       secret/data/github/repo/${{ github.repository }}/testing_private_key_passphrase | TESTING_PRIVATE_KEY_PASSPHRASE ;
+    #       secret/data/github/repo/${{ github.repository }}/testing_private_key_passphrase | TESTING_PRIVATE_KEY_PASS_PHRASE ;
     #       secret/data/github/repo/${{ github.repository }}/aws_s3_bucket | AWS_S3_BUCKET ;
     #       secret/data/github/repo/${{ github.repository }}/aws_access_key_id | AWS_ACCESS_KEY_ID ;
     #       secret/data/github/repo/${{ github.repository }}/aws_secret_access_key | AWS_SECRET_ACCESS_KEY ;
@@ -38,9 +38,9 @@ jobs:
         make centos7-sign
       env:
         PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-        PRIVATE_KEY_PASSPHRASE: ${{ secrets.PRIVATE_KEY_PASSPHRASE }}
+        PRIVATE_KEY_PASS_PHRASE: ${{ secrets.PRIVATE_KEY_PASS_PHRASE }}
         TESTING_PRIVATE_KEY: ${{ secrets.TESTING_PRIVATE_KEY }}
-        TESTING_PRIVATE_KEY_PASSPHRASE: ${{ secrets.TESTING_PRIVATE_KEY_PASSPHRASE }}
+        TESTING_PRIVATE_KEY_PASS_PHRASE: ${{ secrets.TESTING_PRIVATE_KEY_PASS_PHRASE }}
       
     - name: upload-repo-el7
       run: |
