--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
     tags:
     - "v*"
 
+env:
+    GH_TOKEN: ${{ github.token }}
+
 name: Release EL7
 permissions:
     contents: write
@@ -56,7 +59,7 @@ jobs:
     
     - name: checksum-rpm-el7
       run: |
-        make checksum 
+        make centos7-checksum 
       env:
         DEST_DIR: dist/centos7/noarch/
         CHECKSUM_METHOD: sha256
@@ -71,11 +74,8 @@ jobs:
         CHECKSUM_FILE: CHECKSUMsum-centos7-noarch.txt
 
     - name: github-rpm-release-el7
-      uses: softprops/action-gh-release@v2
-      with:
-        files: |
-          "dist/centos7/noarch/*"
-          "dist/centos7/source/*"
+      run: |
+        gh release upload ${{ github.ref_name }} dist/centos7/noarch/* dist/centos7/source/*
       
 
       
