Fix builds names
Signed-off-by: galal-hussein <hussein.galal.ahmed.11@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 env:
     GH_TOKEN: ${{ github.token }}
 
-name: Release EL7
+name: Release RPMs
 permissions:
     contents: write
     id-token: write
