--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
       - master
   pull_request:
 
-name: Build EL7
+name: Build
 permissions:
     contents: read
 jobs:
@@ -17,4 +17,39 @@ jobs:
     - name: build-rpm
       run: |
         make centos7-build
-        
+  build-rpm-el8:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: build-rpm
+      run: |
+        make centos8-build
+  build-rpm-el9:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: build-rpm
+      run: |
+        make centos9-build
+  build-rpm-slemicro:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: build-rpm
+      run: |
+        make slemicro-build
+  build-rpm-microos:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: build-rpm
+      run: |
+        make microos-build
