--- a/Dockerfile.microos.dapper
+++ b/Dockerfile.microos.dapper
@@ -3,7 +3,7 @@ FROM ${TUMBLEWEED}
 ADD https://github.com/AkihiroSuda/clone3-workaround/releases/download/v1.0.0/clone3-workaround.x86_64 /bin/clone3-workaround
 RUN chmod +x /bin/clone3-workaround
 SHELL ["clone3-workaround", "/usr/bin/env", "bash","-c"]
-RUN zypper install -y container-selinux git rpm-build selinux-policy-devel python-pip
+RUN zypper install -y container-selinux git rpm-build selinux-policy-devel
 
 
 ENV DAPPER_SOURCE /source
