--- a/Dockerfile.slemicro.dapper
+++ b/Dockerfile.slemicro.dapper
@@ -2,7 +2,7 @@ FROM registry.suse.com/bci/bci-base:15.4
 
 RUN zypper addrepo https://download.opensuse.org/repositories/security:/SELinux/15.4/security:SELinux.repo
 RUN zypper --gpg-auto-import-keys refresh
-RUN zypper in -y -n --force-resolution container-selinux git rpm-build selinux-policy-devel
+RUN zypper in -y -n --force-resolution container-selinux git rpm-build selinux-policy-devel rpm-sign git
 
 ENV DAPPER_SOURCE /source
 ENV DAPPER_OUTPUT ./dist
